reformatting windows (#13, #14 #21 #29) and suppressing warnings (#48)
* Delete acdm/EA70 directory

old aCDM development details, not relevant

* Delete acdm/data/Simulations/exampleSimulation directory

data for aCDN,not relevant for DYNAMO-HIA

* Delete acdm/referencexml directory

old examples for aCDM, not relevant for DYNAMO

* Solving issues:#29 #21 #14 #13

 Additional improvements:
 - sizes input windows and parameter windows were also to small
 - In case no dalys can be calculated (scenarios have different
transition rates) this is now added to the label

* Bug in redraw output with 9 diseases fixed plus some cleanup

renamed the folder mehdi to something more fitting
redrawing prevalence gave crash without diseases (due to earlier redraw
fix), is fixed
some classes deleted from acdm as they were obsolete and not used

* some cleanup suppression warnings

* more clean up by suppressing warnings and replacing new Integer

* cleaning of aCDM project

Warnings not removed for depreciated getInstance() as this needs more
thinking how to solve

* more cleaning of backaend

* rest of cleaning backend project

mostly suppressing warnings, some depreciated code replaced