@@ -7,9 +7,9 @@ import nl.rivm.emi.dynamo.data.types.interfaces.PayloadType;
 public class ReferenceClass extends AbstractClassIndex implements PayloadType<Integer>{
 	static final protected String XMLElementName = "referenceclass";
 
-	static final protected Integer hardUpperLimit = new Integer(10);
+	static final protected Integer hardUpperLimit =Integer.valueOf(10);
 
 	public ReferenceClass(){
-		super(XMLElementName, new Integer(1), hardUpperLimit);
+		super(XMLElementName, Integer.valueOf(1), hardUpperLimit);
 	}
 }
