@@ -7,11 +7,12 @@ import nl.rivm.emi.dynamo.data.types.interfaces.ContainerType;
  * @author mondeelr
  * Bla
  */
+@SuppressWarnings("rawtypes")
 public class Year extends AbstractYear implements ContainerType{
 	static final protected String XMLElementName = "year";	
 
 	public Year(){
-		super(XMLElementName, new Integer(Integer.MIN_VALUE), new Integer(Integer.MAX_VALUE));
+		super(XMLElementName, Integer.valueOf(Integer.MIN_VALUE), Integer.valueOf(Integer.MAX_VALUE));
 	}
 	
 }
